--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# === Frontend Node Modules ===
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+# === Backend Node Modules ===
+/expense-gpt-backend/node_modules
 
-# production
+# === Build Output ===
 /build
 
-# misc
+# === VS Code and OS Noise ===
 .DS_Store
+
+# === Logs ===
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# === Environment Files (Secrets) ===
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/expense-gpt-backend/.env
