--- a/expense-gpt-backend/package.json
+++ b/expense-gpt-backend/package.json
@@ -2,17 +2,8 @@
   "name": "expense-gpt-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "scripts": {},
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "axios": "^1.9.0"
   }
 }
