--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
 # === Frontend Node Modules ===
 /node_modules
 
+
 # === Backend Node Modules ===
 /expense-gpt-backend/node_modules
+
 
 # === Build Output ===
 /build
 
+
 # === VS Code and OS Noise ===
 .DS_Store
+
 
 # === Logs ===
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# === Environment Files (Secrets) ===
-.env
+
+# === Backend Env File (ignored) ===
+/expense-gpt-backend/.env
+
+
+# === Frontend Env Files (keep .env, ignore others) ===
+!.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-/expense-gpt-backend/.env
